--- a/src/pages/messages/messagebox/Messagebox.css
+++ b/src/pages/messages/messagebox/Messagebox.css
@@ -38,6 +38,7 @@
   border-bottom: 1px solid black; */
   margin-right: 1em;
   padding-left: 0.5em;
+  font-size: 0.8em;
 }
 
 .messagefriends:hover {
